--- a/src/components/resources/style.css
+++ b/src/components/resources/style.css
@@ -886,7 +886,7 @@ header.background .mycolor:hover{
 }
 
 .services .nav .nav-link:focus,
-.services .nav .nav-link:active,
+.services .nav .nav-link.active,
 .services .nav .nav-link:hover {
     background-color: transparent !important;
     color: #15416e;
